fixed contact form alignment for smaller view width

--- a/styles.css
+++ b/styles.css
@@ -806,6 +806,11 @@ section {
   #spiderman {
     width: 5vw;
   }
+  .contact-container {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
 
